# learn

learning-opencv3/: CMakeLists.txt
learning-opencv3/ch10/: blur.cpp  threshold02.cpp
learning-opencv3/ch11/: pyramid.cpp  resize.cpp
learning-opencv3/ch12/: canny.cpp  dft.cpp
learning-opencv3/ch16/: LK.cpp
machine-learning-in-action-python2/: README.md
mastering-opencv/: CMakeLists.txt
mastering-opencv/ANPR/: DetectRegions.h  OCR.h  Plate.cpp  Plate.h  main.cpp  trainOCR.cpp  trainSVM.cpp
opencv/mastering-opencv/: CMakeLists.txt
opencv/mastering-opencv/ANPR/: DetectRegions.cpp  OCR.cpp  Plate.cpp  Plate.h  SVM.xml
opencv/spmallick-learnopencv/: CMakeLists.txt
opencv/spmallick-learnopencv/BlobDetector/: blob.cpp
opencv/spmallick-learnopencv/CenterofBlob/: center_of_multipe_blob.cpp
opencv/spmallick-learnopencv/ConvexHull/: CMakeLists.txt
opencv/spmallick-learnopencv/Delaunay/: CMakeLists.txt
opencv/spmallick-learnopencv/FaceMorph/: CMakeLists.txt  faceMorph.cpp
opencv/spmallick-learnopencv/Homography/: CMakeLists.txt  homography.cpp  homography2.cpp
opencv/spmallick-learnopencv/HuMoments/: shapeMatcher.cpp
opencv/spmallick-learnopencv/Tracking/: CMakeLists.txt  tracking.cpp
opencv/spmallick-learnopencv/WarpTriangle/: CMakeLists.txt  warpTriangle.cpp  warpTriangle_1.cpp
opencv3-beginning/: CMakeLists.txt
opencv3-beginning/ch01/1.image/: image.cpp
opencv3-beginning/ch01/2.erode/: erode.cpp
opencv3-beginning/ch01/4.canny/: canny.cpp
opencv3-beginning/ch03/1.write/: write.cpp
opencv3-beginning/ch05/1.pointer/: pointer.cpp
opencv3-beginning/ch05/6.roi_linear/: roi_linear.cpp
opencv3-beginning/ch06/1.box-filter/: box-filter.cpp
opencv3-beginning/ch06/2.blur/: blur.cpp
opencv3-beginning/ch08/findContours/: findContours.cpp
opencv3-beginning/ch09/: HSHistogram.cpp  compareHistogram.cpp
opencv3-beginning/ch10/: goodFeaturesToTrack.cpp
opencv3-beginning/ch11/: SURF.cpp  surfMatches.cpp
opencv3-beginning/src/1.beginning/3.blur/: blur.cpp
opencv3-beginning/src/1.beginning/5.video/: video.cpp
opencv3-beginning/src/3.highgui/2.mixed/: mixed.cpp
opencv3-beginning/src/3.highgui/3.trackbar/: trackbar.cpp
opencv3-beginning/src/5.core/2.iterator/: iterator.cpp
opencv3-beginning/src/5.core/5.linear/: linear.cpp
opencv3-beginning/src/6.proc/3.gaussian-blur/: gaussian-blur.cpp
opencv3-beginning/src/6.proc/dilate-and-erode/: dilate-and-erode.cpp
opencv3-beginning/src/6.proc/open-and-close/: open-and-close.cpp
opencv3-beginning/src/7.transform/canny/: canny.cpp
opengl/LearnOpenGL/: CMakeLists.txt  README.md
opengl/LearnOpenGL/configuration/: root_directory.h
opengl/LearnOpenGL/includes/learnopengl/: filesystem.h  shader_s.h
opengl/LearnOpenGL/src/1.getting_started/1.1.hello_window/: hello_window.cpp
opengl/LearnOpenGL/src/1.getting_started/1.2.hello_window_clear/: hello_window_clear.cpp
opengl/LearnOpenGL/src/1.getting_started/2.1.hello_triangle/: hello_triangle.cpp
opengl/LearnOpenGL/src/1.getting_started/2.2.hello_triangle_indexed/: hello_triangle_indexed.cpp
opengl/LearnOpenGL/src/1.getting_started/2.3.hello_triangle_exercise1/: hello_triangle_exercise1.cpp
opengl/LearnOpenGL/src/1.getting_started/2.4.hello_triangle_exercise2/: hello_triangle_exercise2.cpp
opengl/LearnOpenGL/src/1.getting_started/2.5.hello_triangle_exercise3/: hello_triangle_exercise3.cpp
opengl/LearnOpenGL/src/1.getting_started/3.1.shaders_uniform/: shaders_uniform.cpp
opengl/LearnOpenGL/src/1.getting_started/3.2.shaders_interpolation/: shaders_interpolation.cpp
opengl/LearnOpenGL/src/1.getting_started/3.3.shaders_class/: shaders_class.cpp
opengl/LearnOpenGL/src/1.getting_started/3.4.shaders_exercise1/: 3.4.shader.vs  shaders_exercise1.cpp
opengl/LearnOpenGL/src/1.getting_started/3.5.shaders_exercise2/: 3.5.shader.vs  shaders_exercise2.cpp
opengl/LearnOpenGL/src/1.getting_started/3.6.shaders_exercise3/: 3.6.shader.vs  shaders_exercise3.cpp
opengl/LearnOpenGL/src/1.getting_started/4.1.textures/: 4.1.textures.vs  textures.cpp
opengl/LearnOpenGL/src/1.getting_started/4.2.textures_combined/: 4.2.texture.fs  4.2.texture.vs  textures_combined.cpp
opengl/LearnOpenGL/src/1.getting_started/4.3.textures_exercise1/: 4.3.texture.fs  textures_exercise1.cpp
opengl/LearnOpenGL/src/1.getting_started/5.1.transformations/: 5.1.transform.vs  transformations.cpp
opengl/LearnOpenGL/src/1.getting_started/5.2.transformations_exercise1/: transformations_exercise1.cpp
opengl/learnopengl/: CMakeLists.txt
opengl/learnopengl/includes/learnopengl/: filesystem.h  shader_m.h  shader_s.h
opengl/learnopengl/src/1.getting_started/1.1.hello_window/: hello_window.cpp
opengl/learnopengl/src/1.getting_started/2.1.hello_triangle/: hello_triangle.cpp
opengl/learnopengl/src/1.getting_started/2.4.hello_triangle_exercise2/: hello_triangle_exercise2.cpp
opengl/learnopengl/src/1.getting_started/3.1.shaders_uniform/: shaders_uniform.cpp
opengl/learnopengl/src/1.getting_started/3.2.shaders_interpolation/: shaders_interpolation.cpp
projects/php-scratch/: .gitignore  buildconf  configure.ac
projects/php-scratch/Zend/: zend.h  zend_portability.h
projects/php-scratch/main/: getopt.c  php.h  php_config.h.in  php_getopt.h
projects/php-scratch/sapi/cli/: Makefile.frag  config.m4  php_cli.c
spmallick-learnopencv/: CMakeLists.txt  README.md
spmallick-learnopencv/AlphaBlending/: CMakeLists.txt  alphaBlend.cpp
spmallick-learnopencv/BlobDetector/: CMakeLists.txt
spmallick-learnopencv/CenterofBlob/: CMakeLists.txt  single_blob.cpp
spmallick-learnopencv/ConvexHull/: example.cpp
spmallick-learnopencv/Delaunay/: CMakeLists.txt  delaunay.cpp  delaunay_1.cpp
spmallick-learnopencv/FaceSwap/: CMakeLists.txt  faceSwap.cpp
spmallick-learnopencv/Hough-Transform/: CMakeLists.txt  hough_circles.cpp  hough_lines.cpp
spmallick-learnopencv/HuMoments/: HuMoments.cpp
spmallick-learnopencv/SeamlessCloning/: CMakeLists.txt  clone.cpp  laplacian_pyramid_blending.cpp  normal_versus_mixed_clone.cpp
spmallick-learnopencv/WarpTriangle/: CMakeLists.txt
(+955 files in other folders)
