cmake_minimum_required (VERSION 2.8)
project (spmallick-learnopencv)

# projects
add_subdirectory(AlphaBlending)
add_subdirectory(BlobDetector)
add_subdirectory(CenterofBlob)
add_subdirectory(ConvexHull)
add_subdirectory(Delaunay)
add_subdirectory(FaceMorph)
add_subdirectory(FaceSwap)
add_subdirectory(Homography)
add_subdirectory(Hough-Transform)
add_subdirectory(SeamlessCloning)
add_subdirectory(Tracking)
add_subdirectory(WarpTriangle)
